tests/ui-stable/transmute-mut-src-not-a-reference.stderr
error[E0308]: mismatched types
  --> tests/ui-stable/transmute-mut-src-not-a-reference.rs:17:38
   |
17 | const SRC_NOT_A_REFERENCE: &mut u8 = transmute_mut!(0usize);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^
   |                                      |
   |                                      expected `&mut _`, found `usize`
   |                                      arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut _`
                           found type `usize`
note: function defined here
  --> tests/ui-stable/transmute-mut-src-not-a-reference.rs:17:38
   |
17 | const SRC_NOT_A_REFERENCE: &mut u8 = transmute_mut!(0usize);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-stable/transmute-mut-src-not-a-reference.rs:17:38
   |
17 | const SRC_NOT_A_REFERENCE: &mut u8 = transmute_mut!(0usize);
   |                                      ^^^^^^^^^^^^^^^------^
   |                                      |              |
   |                                      |              expected due to this value
   |                                      expected `usize`, found `&mut _`
   |
   = note:           expected type `usize`
           found mutable reference `&mut _`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
